client-app/common-sync/customer-sync/objects/Account/fields/FLD_SAP_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_Account_Group__c</fullName>
    <label>SAP Account Group</label>
    <description>SAP Account Group</description>
    <length>4</length>
    <type>Text</type>
</CustomField>