client-app/common-sync/customer-sync/objects/Account/fields/FLD_SAP_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_Is_Deleted__c</fullName>
    <label>SAP Is Deleted</label>
    <description>SAP Is Deleted</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>